--- a/submit1.html
+++ b/submit1.html
@@ -61,17 +61,15 @@
             </section>
             <section>
                 <div class="upload">
-                    <form action="./" class="dropzone" id="dropzoneUpload">
+                    <div id="thumbnail-fine-uploader"></div>
+                    <!--<form action="./" class="dropzone" id="dropzoneUpload">
                         <div class="dz-default dz-message">
                             <span>Click here or drag images to this region to upload recipe images.
                             <br>Upload as many images as you want.
                             <br>The images you upload are shown here, and can be deleted if you want to.</span>
                         </div>
-                    </form>
+                    </form>-->
                 </div>
-            </section>
-            <section>
-                <div id="thumbnail-fine-uploader"></div>
             </section>
             <section>
                 <div class="time">
