Center align upload photo button. Started working on countdown widget for step by step instructions

--- a/recipe.html
+++ b/recipe.html
@@ -189,6 +189,7 @@
                                     </div>
                                     <div class="item">
                                         <div class="step-num">STEP 5</div>
+                                        <div class="clock"></div>
                                         <p>Let pasta cook for 10 minutes, stirring occasionally</p>
                                     </div>
                                     <div class="item">
