Added text to help page

--- a/help.html
+++ b/help.html
@@ -11,11 +11,169 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom CSS files for this page -->
         <link href="./css/font-awesome.min.css" rel="stylesheet">
-        <link href="./css/submit.css" rel="stylesheet">
+        <link href="./css/help.css" rel="stylesheet">
     </head>
     <body>
-        <div>
-        Annoying Text
+        <div class="container">
+            <h2>Getting started</h2>
+            <ul>
+                <li>
+                    <h4>Features</h4>
+                    <ol>
+                       <li>View simple and easy recipes with TL;DRecipes. Log in to favorite and submit your favorite recipes.</li>
+                       <li>Click on the “;D” in the “TL;DRecipes” on the Home Page or Enter Konami code on the Home Page for yummy surprises.</li>
+                    </ol>
+                </li>
+                <li>
+                    <h4>How to Submit Recipes</h4>
+                    Click on the “Submit a Recipe” button at the top on the Navigation Bar
+                </li>
+                <li>
+                    <h4>Dietary Restrictions</h4>
+                    <ol>
+                        <li><div class="diet-icon vegetarian">V</div> = Vegetarian</li>
+                        <li><div class="diet-icon vegan">Vg</div> = Vegan</li>
+                        <li><div class="diet-icon dairy">Df</div> = Dairy-Free</li>
+                        <li><div class="diet-icon kosher">K</div> = Kosher</li>
+                        <li><div class="diet-icon gluten">Gl</div> = Gluten-Free</li>
+                    </ol>
+                </li>
+            </ul>
+            <h2>Nav Bar</h2>
+            <img src="#nav-bar">
+            <ol>
+                <li>
+                    Help Page
+                    <div>Click on “Help” for a fun time</div>
+                </li>
+                <li>
+                    Browse
+                    <div>Click browse to search through the most popular recipes, recently submitted recipes or the recipes with the highest success rate</div>
+                </li>
+                <li>
+                    Submit a Recipe
+                    <div>Click submit a recipe to be taken to Submit a recipe page (Insert hyperlink to submit recipe section)</div>
+                </li>
+                <li>
+                    Search
+                    <div>Toggle between recipe search and user search using the drop down box. Then, type in your search keyword and click “Search”</div>
+                </li>
+                <li>
+                    Advanced Search
+                    <div>Click on Advanced Search to be taken to the Advanced Search (insert Hyperlink on adv search)</div>
+                </li>
+                <li>
+                    Create an Account/Sign In
+                    <div>Click on create account or sign in to log into TL;DRecipes</div>
+                </li>
+                <li>
+                    User Page
+                    <div>Click on “User Page” to be taken to the User Page (hyperlink to user page)</div>
+                </li>
+            </ol>
+            <h2>Recipe Page</h2>
+            <img src="#recipe-page">
+            <ol>
+                <li>Name of the Recipe</li>
+                <li>Approximate time it takes to complete the recipe</li>
+                <li>Percentage of people who have been successful making this recipe</li>
+                <li>Dietary Restrictions of the recipe</li>
+                <li>User who submitted the recipe</li>
+                <li>Picture of completed Recipe</li>
+                <li>
+                    List of Ingredients with quantity
+                    <div>Click on <img src=""> to cycle through the alternative ingredients</div>
+                </li>
+                <li>
+                    Instruction List
+                    <div>You can also view a step by step instruction list, in case you’re on mobile.  Click on the left or right arrow to navigate through the instructions</div>
+                </li>
+                <li>Once you are done with the recipe, please tell us if you were successful with this particular recipe. It helps us filter out the not so successful ones and give you the recipes which are most important</li>
+            </ol>
+            <h2>Advanced Search Page</h2>
+            <img src="adv-search">
+            <ol>
+                <li>
+                    User Search
+                    <div>Search for a specific user by putting his/her username</div>
+                </li>
+                <li>
+                    Recipe Search
+                    <ol type="a">
+                        <li>Search for a recipe with the exact phrase.  No more, no less</li>
+                        <li>Search for a recipe whose name contains these words</li>
+                    </ol>
+                </li>
+                <li>
+                    Ingredient Search
+                    <ol type="a">
+                        <li>Search for recipes containing these ingredients</li>
+                        <li>Search for recipes that do not contain these ingredients</li>
+                    </ol>
+                </li>
+                <li>
+                    Prep Time
+                    <div>Search for recipes with less than or equal to this completion time</div>
+                </li>
+                <li>
+                    Dietary Restrictions
+                    <div>Search for recipes with these dietary restrictions</div>
+                </li>
+            </ol>
+            <h2>User Page</h2>
+            <img src="#user-page">
+            <ol>
+                <li>Name and picture of the user</li>
+                <li>
+                    Additional information about user
+                    <ol type="a">
+                        <li>Number of submitted recipes</li>
+                        <li>Number of favorited recipes</li>
+                        <li>Date user joined TL;DRecipes</li>
+                        <li>Last date user logged in to TL;DRecipes</li>
+                    </ol>
+                </li>
+                <li>A quick “About Me” of the user</li>
+                <li>User’s submitted recipes</li>
+                <li>User’s favorited recipes</li>
+            </ol>
+            <h2>Submit a Recipe Page(s)</h2>
+            <ol>
+                <li>
+                    <h4>Step 1 - General Info</h4>
+                    <img src="step-1">
+                    <ol>
+                        <li>Name of your recipe</li>
+                        <li>Upload recipe image</li>
+                        <li>
+                            Dropdown box of approximate total cook time (including prep time)
+                            <ol type="a">
+                                <li>Upload as many images as you want, but upload them one at a time</li>
+                                <li>You can also delete the pictures by clicking the x button below the picture</li>
+                            </ol>
+                        </li>
+                        <li>Check box with the dietary restrictions.  Select all that apply.</li>
+                    </ol>
+                </li>
+                <li>
+                    <h4>Step 2 - Ingredient List</h4>
+                    <img src="step-2">
+                    <ol>
+                        <li>Amount of ingredient necessary (ex ¼ cup, 1 head etc)</li>
+                        <li>Ingredient (ex Milk, Lettuce)</li>
+                        <li>Click “Add another ingredient” to add more ingredients</li>
+                    </ol>
+                </li>
+                <li>
+                    <h4>Step 3 - Instructions List</h4>
+                    <img src="step-3">
+                    <ol>
+                        <li>Type in the instructions.  Make sure to keep it simple.</li>
+                        <li>Click “Add Step” to add a new step</li>
+                        <li>Click Finish to submit the recipe</li>
+                    </ol>
+                </li>
+            </ol>
         </div>
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
