Added links and diet icons to help page

--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="container">
-            <h2>Getting started</h2>
+            <h2 id="getting-started">Getting started</h2>
             <ul>
                 <li>
                     <h4>Features</h4>
@@ -39,7 +39,7 @@
                     </ol>
                 </li>
             </ul>
-            <h2>Nav Bar</h2>
+            <h2 id="nav-bar">Nav Bar</h2>
             <img src="#nav-bar">
             <ol>
                 <li>
@@ -52,7 +52,7 @@
                 </li>
                 <li>
                     Submit a Recipe
-                    <div>Click submit a recipe to be taken to Submit a recipe page (Insert hyperlink to submit recipe section)</div>
+                    <div>Click submit a recipe to be taken to Submit a <a href="#recipe-page">recipe page</a></div>
                 </li>
                 <li>
                     Search
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                     Advanced Search
-                    <div>Click on Advanced Search to be taken to the Advanced Search (insert Hyperlink on adv search)</div>
+                    <div>Click on Advanced Search to be taken to the <a href="#adv-search">Advanced Search</a></div>
                 </li>
                 <li>
                     Create an Account/Sign In
@@ -68,10 +68,10 @@
                 </li>
                 <li>
                     User Page
-                    <div>Click on “User Page” to be taken to the User Page (hyperlink to user page)</div>
+                    <div>Click on “User Page” to be taken to the <a href="#user-page">User Page</a></div>
                 </li>
             </ol>
-            <h2>Recipe Page</h2>
+            <h2 id="recipe-page">Recipe Page</h2>
             <img src="#recipe-page">
             <ol>
                 <li>Name of the Recipe</li>
@@ -82,7 +82,7 @@
                 <li>Picture of completed Recipe</li>
                 <li>
                     List of Ingredients with quantity
-                    <div>Click on <img src=""> to cycle through the alternative ingredients</div>
+                    <div>Click on <img src="#"> to cycle through the alternative ingredients</div>
                 </li>
                 <li>
                     Instruction List
@@ -90,7 +90,7 @@
                 </li>
                 <li>Once you are done with the recipe, please tell us if you were successful with this particular recipe. It helps us filter out the not so successful ones and give you the recipes which are most important</li>
             </ol>
-            <h2>Advanced Search Page</h2>
+            <h2 id="adv-search">Advanced Search Page</h2>
             <img src="adv-search">
             <ol>
                 <li>
@@ -120,7 +120,7 @@
                     <div>Search for recipes with these dietary restrictions</div>
                 </li>
             </ol>
-            <h2>User Page</h2>
+            <h2 id="user-page">User Page</h2>
             <img src="#user-page">
             <ol>
                 <li>Name and picture of the user</li>
@@ -137,10 +137,10 @@
                 <li>User’s submitted recipes</li>
                 <li>User’s favorited recipes</li>
             </ol>
-            <h2>Submit a Recipe Page(s)</h2>
+            <h2 id="submit-recipe">Submit a Recipe Page(s)</h2>
             <ol>
                 <li>
-                    <h4>Step 1 - General Info</h4>
+                    <h4 id="submit-recipe-1">Step 1 - General Info</h4>
                     <img src="step-1">
                     <ol>
                         <li>Name of your recipe</li>
@@ -156,7 +156,7 @@
                     </ol>
                 </li>
                 <li>
-                    <h4>Step 2 - Ingredient List</h4>
+                    <h4 id="submit-recipe-2">Step 2 - Ingredient List</h4>
                     <img src="step-2">
                     <ol>
                         <li>Amount of ingredient necessary (ex ¼ cup, 1 head etc)</li>
@@ -165,7 +165,7 @@
                     </ol>
                 </li>
                 <li>
-                    <h4>Step 3 - Instructions List</h4>
+                    <h4 id="submit-recipe-3">Step 3 - Instructions List</h4>
                     <img src="step-3">
                     <ol>
                         <li>Type in the instructions.  Make sure to keep it simple.</li>
