added pictures to help.html

--- a/help.html
+++ b/help.html
@@ -40,7 +40,7 @@
                 </li>
             </ul>
             <h2 id="nav-bar">Nav Bar</h2>
-            <img src="#nav-bar">
+            <img src="img\Nav Bar.png">
             <ol>
                 <li>
                     Help Page
@@ -72,7 +72,7 @@
                 </li>
             </ol>
             <h2 id="recipe-page">Recipe Page</h2>
-            <img src="#recipe-page">
+            <img src="img\Recipe Page.png">
             <ol>
                 <li>Name of the Recipe</li>
                 <li>Approximate time it takes to complete the recipe</li>
@@ -82,7 +82,7 @@
                 <li>Picture of completed Recipe</li>
                 <li>
                     List of Ingredients with quantity
-                    <div>Click on <img src="#"> to cycle through the alternative ingredients</div>
+                    <div>Click on <img src="\img\fa-refresh.png"> to cycle through the alternative ingredients</div>
                 </li>
                 <li>
                     Instruction List
@@ -91,7 +91,7 @@
                 <li>Once you are done with the recipe, please tell us if you were successful with this particular recipe. It helps us filter out the not so successful ones and give you the recipes which are most important</li>
             </ol>
             <h2 id="adv-search">Advanced Search Page</h2>
-            <img src="adv-search">
+            <img src="img\Advanced Search.png">
             <ol>
                 <li>
                     User Search
@@ -121,7 +121,7 @@
                 </li>
             </ol>
             <h2 id="user-page">User Page</h2>
-            <img src="#user-page">
+            <img src="img\User_page.png">
             <ol>
                 <li>Name and picture of the user</li>
                 <li>
@@ -141,7 +141,7 @@
             <ol>
                 <li>
                     <h4 id="submit-recipe-1">Step 1 - General Info</h4>
-                    <img src="step-1">
+                    <img src="img\Submit-recipe_Step1.png">
                     <ol>
                         <li>Name of your recipe</li>
                         <li>Upload recipe image</li>
@@ -157,7 +157,7 @@
                 </li>
                 <li>
                     <h4 id="submit-recipe-2">Step 2 - Ingredient List</h4>
-                    <img src="step-2">
+                    <img src="img\Submit-recipe_Step2.png">
                     <ol>
                         <li>Amount of ingredient necessary (ex ¼ cup, 1 head etc)</li>
                         <li>Ingredient (ex Milk, Lettuce)</li>
@@ -166,7 +166,7 @@
                 </li>
                 <li>
                     <h4 id="submit-recipe-3">Step 3 - Instructions List</h4>
-                    <img src="step-3">
+                    <img src="img\Submit-recipe_Step3.png">
                     <ol>
                         <li>Type in the instructions.  Make sure to keep it simple.</li>
                         <li>Click “Add Step” to add a new step</li>
