fixed img link on help.html

--- a/help.html
+++ b/help.html
@@ -82,7 +82,7 @@
                 <li>Picture of completed Recipe</li>
                 <li>
                     List of Ingredients with quantity
-                    <div>Click on <img src="\img\fa-refresh.png"> to cycle through the alternative ingredients</div>
+                    <div>Click on <img src="img\fa-refresh.png"> to cycle through the alternative ingredients</div>
                 </li>
                 <li>
                     Instruction List
