A few additions of blank spaces for reading

--- a/help.html
+++ b/help.html
@@ -15,7 +15,9 @@
     </head>
     <body>
         <div class="container">
-            <h2 id="getting-started">Getting started</h2>
+            <br>
+            <h1 id="getting-started">Getting started</h1>
+            <br>
             <ul>
                 <li>
                     <h4>Features</h4>
@@ -39,8 +41,11 @@
                     </ol>
                 </li>
             </ul>
-            <h2 id="nav-bar">Nav Bar</h2>
+            <br>
+            <h2 id="nav-bar">Navigation Bar</h2>
+            <br>
             <img src="img\Nav Bar.png">
+            <br>
             <ol>
                 <li>
                     Help Page
@@ -71,7 +76,9 @@
                     <div>Click on “User Page” to be taken to the <a href="#user-page">User Page</a></div>
                 </li>
             </ol>
+            <br>
             <h2 id="recipe-page">Recipe Page</h2>
+            <br>
             <img src="img\Recipe Page.png">
             <ol>
                 <li>Name of the Recipe</li>
@@ -90,8 +97,11 @@
                 </li>
                 <li>Once you are done with the recipe, please tell us if you were successful with this particular recipe. It helps us filter out the not so successful ones and give you the recipes which are most important</li>
             </ol>
+            <br>
             <h2 id="adv-search">Advanced Search Page</h2>
+            <br>
             <img src="img\Advanced Search.png">
+            <br>
             <ol>
                 <li>
                     User Search
@@ -120,8 +130,11 @@
                     <div>Search for recipes with these dietary restrictions</div>
                 </li>
             </ol>
+            <br>
             <h2 id="user-page">User Page</h2>
+            <br>
             <img src="img\User_page.png">
+            <br>
             <ol>
                 <li>Name and picture of the user</li>
                 <li>
@@ -137,7 +150,9 @@
                 <li>User’s submitted recipes</li>
                 <li>User’s favorited recipes</li>
             </ol>
+            <br>
             <h2 id="submit-recipe">Submit a Recipe Page(s)</h2>
+            <br>
             <ol>
                 <li>
                     <h4 id="submit-recipe-1">Step 1 - General Info</h4>
@@ -155,7 +170,9 @@
                         <li>Check box with the dietary restrictions.  Select all that apply.</li>
                     </ol>
                 </li>
+                <br>
                 <li>
+                    
                     <h4 id="submit-recipe-2">Step 2 - Ingredient List</h4>
                     <img src="img\Submit-recipe_Step2.png">
                     <ol>
@@ -164,7 +181,9 @@
                         <li>Click “Add another ingredient” to add more ingredients</li>
                     </ol>
                 </li>
+                <br>
                 <li>
+
                     <h4 id="submit-recipe-3">Step 3 - Instructions List</h4>
                     <img src="img\Submit-recipe_Step3.png">
                     <ol>
@@ -174,6 +193,7 @@
                     </ol>
                 </li>
             </ol>
+            <br><br><br>
         </div>
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
